1. chapter is now fixed. Imrpove Emotiv EPOC section.

--- a/thesis/tex/BCI.tex
+++ b/thesis/tex/BCI.tex
@@ -15,6 +15,7 @@ A review by Bashashati \emph{et al.} gives a good overview of \glspl{BCI} based 
 Hybrid \gls{BCI} uses two different neuromechanisms in a \gls{BCI} and therefore two different \gls{EEG} analysing methods are required~\cite{hybrid_bci, hybrid_bci2}.
 
 \section{Visual stimulus}
+\label{sec:stimuli}
 
 As discussed in section~\ref{sec:VEP}, it is possible to present multiple visual stimuli to a subject and detect, which stimulus is the subject looking at. It was also mentioned that computer monitor can be used to present visual stimuli. This section will discuss how stimuli with certain blinking frequency can be displayed on a computer screen. In this thesis only the stimulus that can be presented by a computer monitor is discussed, because research has shown that LCD screens produce more accurate stimuli than light-emitting diodes~\cite{lcd_lcd_led}. 
 
@@ -84,6 +85,7 @@ If the monitor refresh rate is 60 Hz, then the flickering of 10 Hz corresponds t
 \end{figure}
 
 \section{Fourier analysis}
+\label{sec:fourier}
 
 As discussed in the previous section, the flickering of a target can produce three different waveforms. Now we will discuss how these waveforms can be represented by sums of simpler trigonometric functions. The study of this decomposition process is called Fourier analysis, named after Joseph Fourier, whose insight to model all functions by trigonometric series was a breakthrough in the field in 1807.
 
