--- a/thesis/tex/EEG.tex
+++ b/thesis/tex/EEG.tex
@@ -28,7 +28,7 @@ A typical \gls{neuron} has a cell body, multiple nerve endings or \glspl{dendrit
 
 To send signals, \glspl{neuron} must be able to maintain electric potential called \gls{membrane potential}. \Gls{membrane potential} is the difference in electric potential between the interior and the exterior of a cell. When a \gls{neuron} is not sending signals or in other words, when neuron is at a \gls{resting state}, its \gls{membrane potential} is slightly negative. The \gls{membrane potential} of a \gls{neuron} at a \gls{resting state} is called \gls{resting potential}. Negative \gls{resting potential} is achieved by having more positively charged ions around the cell than inside the cell.
 
-By having stable \gls{resting potential}, a \gls{neuron} is able to send signals by rapidly increasing and decreasing the \gls{membrane potential} along an \gls{axon}. Therefore, the signal travelling along an \gls{axon} is actually higher potential moving toward \glspl{synapse}. This event is called an \gls{action potential}. See figure~\ref{fig:action_potential} for example. To increase or decrease the \gls{membrane potential} of a cell, \glspl{ionophoric protein} are used. These proteins transport ions across the cell membrane to regulate the concentration of ions inside the cell. Since ions are electrically charged, these proteins can also be used to regulate the \gls{membrane potential} of a cell.
+By having stable \gls{resting potential}, \glspl{neuron} are able to send signals by rapidly increasing and decreasing the \gls{membrane potential} along an \gls{axon}. This event is called an \gls{action potential}. See figure~\ref{fig:action_potential} for example. To increase or decrease the \gls{membrane potential} of a cell, \glspl{ionophoric protein} are used. These proteins transport ions across the cell membrane to regulate the concentration of ions inside the cell. Since ions are electrically charged, the concentration of ions inside a cell affects the \gls{membrane potential} of the cell. The \gls{membrane potential} of a cell can be increased by transporting positive ions into the cell and decreased by transporting positive ions out of the cell. 
 
 An \gls{action potential} or signal sending is initiated when the \gls{membrane potential} of a \gls{neuron} exceeds certain threshold value called \gls{threshold potential}. The \gls{membrane potential} of a \gls{neuron} can increase when the \gls{neuron} receives signals from other \glspl{neuron}. The \gls{neuron} that receives a signal is called \gls{postsynaptic cell}. The received signal can cause the \gls{membrane potential} of the \gls{postsynaptic cell} to increase or decrease. This change in \gls{membrane potential} is called a \gls{postsynaptic potential}. If the \gls{postsynaptic potential} is large enough for the \gls{membrane potential} to exceed \gls{threshold potential}, an \gls{action potential} is initiated in the \gls{postsynaptic cell}.
 
@@ -162,12 +162,17 @@ When comparing the \glspl{VEP} elicited by
 
 To make the detection of \glspl{VEP} easier, \glspl{SSVEP} are used. If the visual stimulus is presented at a constant rate and the rate is so fast that the visual pathway does not have enough time to fully recover between stimulus presentations, then the elicited response becomes continuous and it is called the \gls{SSVEP}~\cite{VEP}. See figure X for an example of \gls{VEP} and \gls{SSVEP}. \gls{SSVEP} is continuous and therefore it is easier to detect it in \gls{EEG} recording than \glspl{VEP}, which are not continuous. Detecting continuous response is easier because it is always present in the recording. The methods used to detect \gls{SSVEP} in \gls{EEG} recording are discussed in section~\ref{sec:SSVEP_detection}.
 
-Research has shown that \glspl{SSVEP} reflect certain properties of the visual stimulus. The frequency of \gls{SSVEP} elicited by a visual stimulus is the same as the presentation rate or \gls{flickering} frequency of the visual stimulus. Furthermore, not only the frequency of the visual stimulus can be detected in the \gls{EEG} recording, but also its \glspl{harmonic}. 
+Research has shown that \glspl{SSVEP} reflect certain properties of the visual stimulus. The \gls{SSVEP} is composed of components that have different frequencies. The visual stimuli and signal components are further discussed in section~\ref{sec:stimuli} and section~\ref{sec:fourier} respectively. The frequency of the component that has the highest amplitude is the same as the \gls{fundamental frequency} or the lowest frequency of the visual stimulus. Thus \gls{SSVEP} can be detected in \gls{EEG} recording by finding and analysing the components of \gls{SSVEP} in the recording.
+%The frequency of \gls{SSVEP} elicited by a visual stimulus is the same as the presentation rate or \gls{flickering} frequency of the visual stimulus. Furthermore, not only the frequency of the visual stimulus can be detected in the \gls{EEG} recording, but also its \glspl{harmonic}. \Glspl{harmonic} are components of \gls{SSVEP} that have frequency which is integer multiple of the fundamental frequency. Thus \gls{SSVEP} is composed of components each of which has frequency that is integer multiple of the lowest frequency in \gls{SSVEP}.
 
 \section{Emotiv EPOC}
 \label{sec:EEG_comparison}
 
-In section~\ref{sec:neuroimaging} we briefly compared different functional neuroimaging methods and concluded that currently \gls{EEG} is most suitable for our needs. But there is a wide variety of EEG devices available. See table~\ref{tab:EEG} for details. As discussed in section~\ref{sec:neuroimaging}, we prefer a device that is available to the consumer.
+In section~\ref{sec:neuroimaging} different functional neuroimaging methods were compared and it was concluded that currently \gls{EEG} is most suitable for designing inexpensive and portable interface for controlling a robot. But there is a wide variety of EEG devices available. The aim of this section is to briefly compare some of the devices and choose inexpensive and portable device available to the consumer.
+
+Continuous signal cannot be directly represented in computers or in other digital devices and therefore continuous signal has to be converted to discrete signal to process it with a computer. As already mentioned in section~\ref{sec:EEG}, \gls{EEG} measures brain activity as function of voltage versus time. This function represents discrete signal, which means that both voltage and time are discrete. In other words, there is a finite set of possible values that the voltage can have and these values are acquired one after another in a certain rate. This rate at which digital values are extracted from a continuous signal is called \gls{sampling rate}. The device which converts continuous voltage to a sequence of discrete values is called \gls{ADC} device and \gls{ADC} resolution shows how many different values the device can represent.
+
+The table~\ref{tab:EEG} shows comparison of different \gls{EEG} devices. Devices are compared by price, the number of electrodes or channels, the \gls{sampling rate} and the \gls{ADC} resolution. The higher the sampling rate, the more values are extracted in same time interval. The higher the \gls{ADC} resolution, the more different voltages the device can represent.
 
 \newcommand{\patiCHamp}{\tablefootnote{http://www.brainvision.com/files/actiCHamp-PyCorder-Flyer\_US.pdf}}
 \newcommand{\pmitsar}{\tablefootnote{http://www.novatecheeg.com/products--software.html}}
@@ -190,9 +195,7 @@ In section~\ref{sec:neuroimaging} we briefly compared different functional neuro
 	\label{tab:EEG}
 \end{table}
 
-OpenBCI is an open source \gls{BCI} that provides access to all the data and algorithms, which makes it good for specialists, but it is not easy to use for a non-specialist. From the more consumer-friendly devices, Emotiv EPOC seems to offer good price-quality relationship. Therefore, we will choose Emotiv EPOC for controlling a robot.
-
-Emotiv EPOC has 16 electrodes, two of which are reference electrodes. Reference electrodes have two different possible locations: P3 and P4 or locations behind the ears. Other electrodes have fixed locations AF3, AF4, F3, F4, F7, F8, FC5, FC6, P7, P8, T7, T8, O1, O2. See figure~\ref{fig:electrode_locations} for illustration. Emotiv EPOC has a sampling rate of \SI{128}{Hz}, an internal sampling rate of \SI{2048}{Hz} and an \gls{ADC} resolution of 16 bit.
+From the more consumer-friendly devices, Emotiv EPOC seems to offer good price-quality relationship. Furthermore, Emotiv EPOC is wireless. Emotiv EPOC has 16 electrodes, two of which are reference electrodes. Reference electrodes have two different possible locations: P3 and P4 or locations behind the ears. Other electrodes have fixed locations: AF3, AF4, F3, F4, F7, F8, FC5, FC6, P7, P8, T7, T8, O1, O2. See figure~\ref{fig:electrode_locations} for illustration. Emotiv EPOC has a sampling rate of \SI{128}{Hz}, an internal sampling rate of \SI{2048}{Hz} and an \gls{ADC} resolution of 16 bit. High internal \gls{sampling rate} is used to remove artefacts from the signal. The signal is filtered and transmitted to wireless receiver with reduced \gls{sampling rate} of \SI{128}{Hz}.
 
 \begin{figure}[h]
 	\centering
@@ -202,5 +205,4 @@ Emotiv EPOC has 16 electrodes, two of which are reference electrodes. Reference 
 \end{figure}
 \footnotetext{http://emotiv.wikia.com/wiki/Emotiv\_EPOC}
 
-
-An \gls{ADC} device converts continuous voltage to the sequence of discrete values or in other words, an analog signal to a digital signal that can be processed by a computer. The \gls{ADC} resolution indicates the number of discrete values it can produce. Sampling rate is the rate at which digital values are extracted from a continuous signal.
+Therefore, Emotiv EPOC is chosen as \gls{EEG} device for controlling a robot in this thesis. Chapter~\ref{sec:SSVEP_BCI} contains details about the designed application for controlling a robot.
