--- a/thesis/tex/SSVEP_BCI.tex
+++ b/thesis/tex/SSVEP_BCI.tex
@@ -1,6 +1,6 @@
 
 \chapter{SSVEP-based BCI for controlling a robot}
-\label{SSVEP_BCI}
+\label{sec:SSVEP_BCI}
 \section{Signal pipeline}
 asd
 \section{Target identification}
