--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -118,6 +118,14 @@
 	name = peripheral vision,
 	description = {--}
 }
+\newglossaryentry{fundamental frequency}{
+	name = fundamental frequency,
+	description = {--}
+}
+\newglossaryentry{sampling rate}{
+	name = sampling rate,
+	description = {--}
+}
 \newglossaryentry{harmonic}{
 	name = harmonic,
 	description = {--}
