--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -195,6 +195,8 @@ VEP section
 
 BCI Chapter
 
+Related work
+
 @article{psda,
 	title = {Design and implementation of a brain-computer interface with high transfer rates},
 	author = {Ming Cheng and Xiaorong Gao and Shangkai Gao and Dingfeng Xu},
@@ -280,8 +282,6 @@ BCI Chapter
 	year = {2013}
 }
 
-BCI comparison
-
 @article{bci_comparison,
 	title = {A survey of signal processing algorithms in brain-computer interfaces based on electrical brain signals},
 	author = {Ali Bashashati and Mehrdad Fatourechi and Rabab K. Ward and Gary E. Birch},
@@ -307,6 +307,31 @@ BCI comparison
 	pages = {215--219},
 	year = {2014}
 }
+
+@article{cca_psda,
+	title = {{Comparison of PSDA and CCA detection methods in a SSVEP-based BCI-system}},
+	author = {Gido Hakvoort and Boris Reuderink and Michel Obbink},
+	journal = {Technical Report TR-CTIT-11-03},
+	year = {2011},
+	url = {http://doc.utwente.nl/76127/1/Comparison_of_PSDA_and_CCA_detection_methods_in_a_SSVEP-based_BCI-system.pdf}
+}
+
+@incollection{mcca,
+	year={2011},
+	isbn={978-3-642-24954-9},
+	booktitle={Neural Information Processing},
+	volume={7062},
+	series={Lecture Notes in Computer Science},
+	editor={Lu, Bao-Liang and Zhang, Liqing and Kwok, James},
+	doi={10.1007/978-3-642-24955-6_35},
+	title={Multiway Canonical Correlation Analysis for Frequency Components Recognition in SSVEP-Based BCIs},
+	url={http://dx.doi.org/10.1007/978-3-642-24955-6_35},
+	publisher={Springer Berlin Heidelberg},
+	author={Zhang, Yu and Zhou, Guoxu and Zhao, Qibin and Onishi, Akinari and Jin, Jing and Wang, Xingyu and Cichocki, Andrzej},
+	pages={287-295},
+	language={English}
+}
+
 
 Visual stimuli section
 
