--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -126,12 +126,20 @@
 	name = sampling rate,
 	description = {--}
 }
-\newglossaryentry{harmonic}{
-	name = harmonic,
-	description = {--}
-}
 \newglossaryentry{flickering}{
 	name = flickering,
+	description = {--}
+}
+\newglossaryentry{target}{
+	name = target,
+	description = {--}
+}
+\newglossaryentry{feature extraction}{
+	name = feature extraction,
+	description = {--}
+}
+\newglossaryentry{harmonic}{
+	name = harmonic,
 	description = {--}
 }
 
