--- a/thesis/myStyle.sty
+++ b/thesis/myStyle.sty
@@ -6,6 +6,7 @@
 \usepackage{subcaption}					% for subfigures
 %\usepackage{mathtools}					% for curly braces under equation. Also includes amsmath.
 \usepackage[inline,shortlabels]{enumitem}% for alphabetical enumerate or inline list.
+\usepackage[pdftitle={Control a Robot via VEP Using Emotiv EPOC},pdfauthor={Anti Ingel},hidelinks]{hyperref}
 
 \usepackage[nogroupskip, acronym]{glossaries}	% for acronyms
 \renewcommand{\glossarysection}[2][]{}			% no title for glossary
