--- a/thesis/tex/EEG.tex
+++ b/thesis/tex/EEG.tex
@@ -35,15 +35,15 @@ An \gls{action potential} or signal sending is initiated when the \gls{membrane 
 The following paragraph is mainly based on the article by Buzsaki \textit{et al.}~\cite{electric_field}. The \gls{postsynaptic potential} is caused by ions flowing into the cell. To achieve electroneutrality, a balancing flow of ions from the interior to the exterior of the cell is needed. The ions of the balancing flow have the same electric charge as the entering ions. If the ions flowing into the cell have
 \begin{itemize}
 	\item positive charge, then 
-	\subitem the \gls{membrane potential} of the cell increases,
-	\subitem location where positive ions enter the cell is called a \gls{sink},
-	\subitem location where positive ions exit the cell is called a \gls{source} and
-	\subitem positive ions are gathered from the \gls{sink} and accumulated around the \gls{source}.
+	\subitem the \gls{membrane potential} of the cell increases;
+	\subitem location where positive ions enter the cell is called a \gls{sink};
+	\subitem location where positive ions exit the cell is called a \gls{source}; and
+	\subitem as a result, there are less positive ions around \gls{sink} and more around \gls{source};
 	\item negative charge, then
-	\subitem the \gls{membrane potential} of the cell decreases,
-	\subitem location where negative ions enter the cell is called a \gls{source},
-	\subitem location where negative ions exit the cell is called a \gls{sink} and
-	\subitem negative ions are gathered from the \gls{source} and accumulated around the \gls{sink}.
+	\subitem the \gls{membrane potential} of the cell decreases;
+	\subitem location where negative ions enter the cell is called a \gls{source};
+	\subitem location where negative ions exit the cell is called a \gls{sink}; and
+	\subitem as a result, there are less negative ions around \gls{source} and more around \gls{sink}.
 \end{itemize}
 
 In both cases, the \gls{source} has more positive electrical charge than the \gls{sink}. Since the \gls{source} and the \gls{sink} have different electric potentials, they form a \gls{dipole}. See figure~\ref{fig:dipole} for illustration.
@@ -197,6 +197,8 @@ The table~\ref{tab:EEG} shows comparison of different \gls{EEG} devices. Devices
 
 From the more consumer-friendly devices, Emotiv EPOC seems to offer good price-quality relationship. Furthermore, Emotiv EPOC is wireless. Emotiv EPOC has 16 electrodes, two of which are reference electrodes. Reference electrodes have two different possible locations: P3 and P4 or locations behind the ears. Other electrodes have fixed locations: AF3, AF4, F3, F4, F7, F8, FC5, FC6, P7, P8, T7, T8, O1, O2. See figure~\ref{fig:electrode_locations} for illustration. Emotiv EPOC has a sampling rate of \SI{128}{Hz}, an internal sampling rate of \SI{2048}{Hz} and an \gls{ADC} resolution of 16 bit. High internal \gls{sampling rate} is used to remove artefacts from the signal. The signal is filtered and transmitted to wireless receiver with reduced \gls{sampling rate} of \SI{128}{Hz}.
 
+Therefore, Emotiv EPOC is chosen as \gls{EEG} device for controlling a robot in this thesis. Chapter~\ref{sec:SSVEP_BCI} contains details about the designed application for controlling a robot.
+\newpage
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.6\textwidth]{electrode_locations.png}
@@ -205,4 +207,4 @@ From the more consumer-friendly devices, Emotiv EPOC seems to offer good price-q
 \end{figure}
 \footnotetext{http://emotiv.wikia.com/wiki/Emotiv\_EPOC}
 
-Therefore, Emotiv EPOC is chosen as \gls{EEG} device for controlling a robot in this thesis. Chapter~\ref{sec:SSVEP_BCI} contains details about the designed application for controlling a robot.
+
