--- a/thesis/tex/appendices.tex
+++ b/thesis/tex/appendices.tex
@@ -20,7 +20,7 @@
 		\item[1.2] make available to the public via the web environment of the University of Tartu, including via the DSpace digital archives until expiry of the term of validity of the copyright,
 	\end{enumerate}
 	of my thesis\\
-	\textbf{Control a robot via VEP using Emotiv EPOC}\\
+	\textbf{Control a Robot via VEP Using Emotiv EPOC}\\
 	supervised by Ilya Kuzovkin
 	\item I am aware of the fact that the author retains these rights.
 	\item I certify that granting the non-exclusive licence does not infringe the intellectual property rights or rights arising from the Personal Data Protection Act.
